--- a/SkinBag/build.gradle
+++ b/SkinBag/build.gradle
@@ -5,7 +5,8 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.tufusi.qskinhook"
+        applicationId "com.tufusi.skinbag"
+
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
@@ -25,12 +26,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation project(path: ':QSkinSdk')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    implementation "com.android.support:design:29.1.0"
 
 }
